<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_find_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/helper_text_pad"
        android:text="@string/interested_gender"
        android:textSize="@dimen/helper_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_men"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_gender"
        android:text="@string/men"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_find_gender" />

    <Button
        android:id="@+id/button_women"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/selector_gender"
        android:text="@string/women"
        app:layout_constraintLeft_toRightOf="@+id/button_men"
        app:layout_constraintStart_toEndOf="@+id/button_men"
        app:layout_constraintTop_toBottomOf="@+id/text_find_gender" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/custom_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:absoluteMaxValue="18"
        app:absoluteMinValue="60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_women"
        app:textAboveThumbsColor="@android:color/black" />

    <Button
        android:id="@+id/button_continue"
        style="@style/ContinueButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
